# devtools

./: .gitignore  .metadata  Cargo.toml  README.md  build.yaml  pubspec.yaml
integration_test/: simple_test.dart
lib/: main.dart
lib/layout/: main_layout.dart
lib/pages/: home_page.dart  json_format_page.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: json_format.dart
lib/src/rust/models/: indent_type.dart
linux/flutter/: generated_plugins.cmake
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml  cargokit.yaml
rust/src/: frb_generated.rs
rust/src/api/: json_format.rs  mod.rs  simple.rs
rust_back/: Cargo.toml  Dioxus.toml  index.html
rust_back/src/: main.rs
src/: routes.rs
src/components/: home.rs  json_format.rs  layout.rs  mod.rs  timestamp.rs
test/: json_test.rs
windows/flutter/: generated_plugins.cmake
