[package]
name = "devtools"
version = "0.1.0"
authors = ["joysfan"]
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["desktop"] }
dioxus-router = "0.6.0"
json5 = "0.4.1"  # 解析 JSON5 格式
json-repair = "0.4.0"   # 修复 JSON 格式
serde_json = "1.0.134"  # 处理 JSON 数据
arboard = "3.3"  # 用于原生平台的剪贴板操作


[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
